objects/amc__Attendee__c.object
<CustomObject>
    <description>The Attendee Object is used to identify which Roles will be required at the Meeting.</description>
    <fields>
        <fullName>amc__Apology__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the Attendee was unable to attend the meeting</inlineHelpText>
        <label>Apology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the Attendee attended the meeting</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Meeting that this Attendee will be attending</inlineHelpText>
        <label>Meeting</label>
        <referenceTo>amc__Meeting__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Reason_for_Apology__c</fullName>
        <inlineHelpText>Identifies the reason the Attendee was unable to attend the meeting</inlineHelpText>
        <label>Reason for Apology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Role record of the Attendee</description>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Meeting__c</columns>
        <columns>amc__Role__c</columns>
        <columns>amc__Attended__c</columns>
        <columns>amc__Apology__c</columns>
        <columns>amc__Reason_for_Apology__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATT-{0}</displayFormat>
        <label>Attendee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>